# scripting

./: anth  anth.sh  cli-v1.sh
anth/: Cargo.toml  README.md
anth/src/: main.rs
